[package]
name = "addrhuntr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.20.2"
sha3 = "0.9.1"
rand = "0.8.3"
hex = "0.4.3"
ctrlc = "3.2.1"
num_cpus = "1.13.0"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
num-format = "0.4"
