[package]
name = "addrhuntr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
secp256k1 = "0.20.2"
sha3 = "0.9.1"
rand = "0.8.3"
hex = "0.4.2"
ctrlc = "3.1.7"
chrono = "0.4.19"
clap = { version = "3.1.0", features = ["derive"] }
num-format = "0.4.0"
